# face-recognition-fastapi

./: .gitignore  Dockerfile  pyproject.toml  railway.toml
face_recognition_api/: image_processing.py  image_storage.py  main.py  settings.py  vector_db.py
